--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,26 @@ __pycache__/
 .poetry/
 .poetry.lock
 
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
 # Virtual environment
 venv/
 env/
